tests/expected_package_split_duplicate_member.diag.out
<input2>:2:8: error: duplicate declaration for 'value'
    public fn value() -> Int {
           ^^^^^^^^^^^^^^^^^^^
